Ajout du service de reconnaissance d'activité (Activity recognition) de google et petits correctifs sur les classe techniques (App et Util)

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
     <string name="gps">Géolocalisation</string>
     <string name="pedometer">Podomètre</string>
+    <string name="recognize_activity">Reconnaissance d\'activité</string>
     <string name="accelerometer">Accéléromètre</string>
     <string name="step_count">Accéléromètre</string>
 
