intégration de l'appareil photo dans l'application principal

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="pedometer">Podomètre</string>
     <string name="recognize_activity">Reconnaissance d\'activité</string>
     <string name="accelerometer">Accéléromètre</string>
+    <string name="camera">Appareil Photo</string>
+
     <string name="step_count">Accéléromètre</string>
 
     <string name="title_activity_maps">Map</string>
