Correction nom application + classe fragment générique (pour pouvoir y mettre des comportements que l'on souhaite définir sur chacun des fragments , exemple titre)

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="gps">Géolocalisation</string>
     <string name="pedometer">Podomètre</string>
     <string name="recognize_activity">Reconnaissance d\'activité</string>
+    <string name="choose_sensor">Capteurs</string>
     <string name="accelerometer">Accéléromètre</string>
     <string name="camera">Appareil Photo</string>
 
