Added pedometer on mapsActivity layout

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="accelerometer">Accéléromètre</string>
     <string name="camera">Appareil Photo</string>
 
-    <string name="step_count">Accéléromètre</string>
+    <string name="step_count">Nombre de pas : %d</string>
 
     <string name="title_activity_maps">Map</string>
     <string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s avec une précision de %4$s mètres </string>
