--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+
+    <string name="back"><![CDATA[<]]></string>
+    <string name="rewind"><![CDATA[<<]]></string>
+    <string name="forward"><![CDATA[>>]]></string>
+    <string name="pause">||</string>
+
     <string name="app_name">FunCulture</string>
 
     <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
