--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="choose_sensor">Capteurs</string>
     <string name="accelerometer">Accéléromètre</string>
     <string name="camera">Appareil Photo</string>
+    <string name="qrcode">QRCode Scanner</string>
+
 
     <string name="step_count">Accéléromètre</string>
 
