Ajout module QCM (en fragment) Ajout fake bouton pour le lancer en attendant de le lancer ailleurs (sur l’approche d’un point d’intérêt par exemple) Ajout d’un mécanisme de retour sur fragment (home et map en prio) Ajout d’une dialog de validation pour quitter l’app

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -34,5 +34,14 @@
 
     <string name="title_activity_maps">Map</string>
     <string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s avec une précision de %4$s mètres </string>
+    <string name="qcm_no_selected">Veuillez sélectionner une réponse</string>
+    <string name="qcm_see_result">Voir les résultats</string>
+    <string name="ok">OK</string>
+    <string name="qcm">QCM</string>
+    <string name="next">Suivant</string>
+    <string name="end_qcm">Bravo ! Merci d\'avoir répondu au QCM, votre score est de : %d</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
+    <string name="leave_app">Souhaitez-vous vraiment quitter l\'application</string>
 
 </resources>
