--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -43,5 +43,9 @@
     <string name="yes">Oui</string>
     <string name="no">Non</string>
     <string name="leave_app">Souhaitez-vous vraiment quitter l\'application</string>
+    <string name="sport_level">Niveau sportif :</string>
+    <string name="register">S\'inscrire</string>
+    <string name="success_register">Félicitation ! Vous êtes désormais inscrit.</string>
+    <string name="missing_field_warning">Veuillez renseigner tous les champs s\'il vous plaît.</string>
 
 </resources>
