Ajout d'un fragment de test pour les requêtes (GetZone et InsertPoint pour le moment) implémentation de l'insertion d'un point au niveau du service Début d'implémentation des classes techniques pour un Path (Path et PointOfInterest)

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="register">S\'inscrire</string>
     <string name="success_register">Félicitation ! Vous êtes désormais inscrit.</string>
     <string name="missing_field_warning">Veuillez renseigner tous les champs s\'il vous plaît.</string>
+    <string name="queries">Requêtes</string>
 
 </resources>
