Ajout création et sauvegarde de chemins et points associés + petite correction sur un crash de la map

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="success_register">Félicitation ! Vous êtes désormais inscrit.</string>
     <string name="missing_field_warning">Veuillez renseigner tous les champs s\'il vous plaît.</string>
     <string name="queries">Requêtes</string>
+    <string name="create_path">Créer chemin</string>
+    <string name="add_point" formatted="false">Ajouter un point</string>
 
 </resources>
