Ajout de la connexion (non terminé)

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="queries">Requêtes</string>
     <string name="create_path">Créer chemin</string>
     <string name="add_point" formatted="false">Ajouter un point</string>
+    <string name="connection">Connexion</string>
 
 </resources>
