Ajout connexion avec récupération de toutes les infos de l'utilisateur (id, nom, prenom, etc...) a partir de pseudo et pass

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="create_path">Créer chemin</string>
     <string name="add_point" formatted="false">Ajouter un point</string>
     <string name="connection">Connexion</string>
+    <string name="login_failed">Mauvais pseudo ou mot de passe.</string>
 
 </resources>
