Ajout épreuves et QCM en connecté , downgrad du target sdk pour ne plus gérer les autorisations et lien entre point de passage et non points d'intérêts

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="update_user">Mise à jour informations</string>
     <string name="already_connected">Vous êtes déja connecté.</string>
     <string name="choose_path">Choisir un parcours</string>
+    <string name="webview">webview</string>
 
 </resources>
