Ajout du QCM et de l’Epreuve chargé depuis la base (le qcm est propre a un parcours et se lance sur le même bouton qu’avant à savoir celui avec le check, et pour l’epreuve il suffit de cliquer une seconde fois sur un point d’intérêt, si il a une épreuve ça nous proposera alors de la lancer

--- a/FunCulture/app/src/main/res/values/strings.xml
+++ b/FunCulture/app/src/main/res/values/strings.xml
@@ -57,5 +57,7 @@
     <string name="already_connected">Vous êtes déja connecté.</string>
     <string name="choose_path">Choisir un parcours</string>
     <string name="webview">webview</string>
+    <string name="launch_epreuve">Il existe une épreuve relative à ce point de passage, souhaitez-vous l\'effectuer et bénéficier d\'un bonus d\'expérience ?</string>
+    <string name="success_epreuve">Bravo vous avez gagné %d Xp !</string>
 
 </resources>
